# murrikey

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dump.txt  main.cpp  murrikey  murrikey_0.1.0.orig.tar.xz
.cache/clangd/index/: main.cpp.61B1AB1FEDA44272.idx
.qt/: QtDeploySupport.cmake
debian/: README.Debian  README.source  changelog  control  copyright  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  murrikey.cron.d.ex  murrikey.doc-base.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/upstream/: metadata.ex
include/: config.h  input_manager.h  key_mapper.h  overlay.h  preferences.h
murrikey_autogen/: deps
murrikey_autogen/include/: main.moc  main.moc.d
src/: config.cpp  config.h  input_manager.cpp  input_manager.h  key_mapper.cpp  key_mapper.h  main.cpp  overlay.cpp  overlay.h  preferences.cpp  preferences.h
src/core/: app.cpp  app.h  input_manager.cpp  input_manager.h  input_x11.cpp  key_mapper.cpp  key_mapper.h  key_mapper_data.cpp  murrikey_app.cpp  murrikey_app.h
src/core/input/: input_backend.h  input_manager.cpp  input_manager.h  input_wayland.cpp  input_x11.cpp  input_x11.h
src/core/key_mapper/: key_mapper.cpp  key_mapper.h  key_mapper_data.cpp
src/ui/: overlay.h  overlay_core.cpp  overlay_logic.cpp  overlay_ui.cpp  preferences.cpp  preferences.h  preferences_ui.cpp  screen_selector.cpp  screen_selector.h
src/ui/overlay/: overlay.h
src/ui/preferences/: preferences.h
src/utils/: config.h  hardware_sync.cpp  hardware_sync.h
